// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UsageTable should match a snapshot with billing 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <h2
        class="el-subtitle"
      >
        Monthly Total
      </h2>
      <p
        class="el-has-grey-text el-body-text"
      >
        £
        9.57
      </p>
      <h2
        class="el-subtitle"
      >
        Breakdown
      </h2>
      <div
        class="el-table"
        data-has-call-to-action="false"
        data-has-expandable-action="true"
        data-num-columns-excl-action-col="4"
      >
        <div
          class="el-table-headers-row"
        >
          <div
            class="el-table-header"
          >
            Entity Name
          </div>
          <div
            class="el-table-header"
          >
            Total Number Calls
          </div>
          <div
            class="el-table-header"
          >
            Total Cost
          </div>
          <div
            class="el-table-header"
          >
            Total Number Endpoints
          </div>
          <div
            class="el-table-header"
          >
            <span
              class="el-icon"
              style="font-size: 1.2rem;"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="el-table-row-container"
        >
          <div
            class="el-table-row"
          >
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Entity Name"
              >
                contacts
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Total Number Calls"
              >
                157
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Total Cost"
              >
                £1.96
              </div>
            </div>
            <div
              class="el-table-cell-has-dark-text el-table-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
              <div
                class="el-table-cell-content"
                data-narrow-label="Total Number Endpoints"
              >
                2
              </div>
            </div>
            <div
              class="el-table-expandable-row-trigger-cell"
            >
              <span
                class="el-intent-secondary el-icon"
              >
                <svg />
              </span>
            </div>
          </div>
          <div
            class="el-table-expandable-row"
          >
            <div
              class="el-table-expandable-container"
            >
              <div
                class="el-table"
              >
                <div
                  class="three-col-table el-table-headers-row"
                >
                  <div
                    class="el-table-header"
                  >
                    Endpoint Name
                  </div>
                  <div
                    class="el-table-header"
                  >
                    Endpoint Number Calls
                  </div>
                  <div
                    class="el-table-header"
                  >
                    Endpoint Cost
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <h2
      class="el-subtitle"
    >
      Monthly Total
    </h2>
    <p
      class="el-has-grey-text el-body-text"
    >
      £
      9.57
    </p>
    <h2
      class="el-subtitle"
    >
      Breakdown
    </h2>
    <div
      class="el-table"
      data-has-call-to-action="false"
      data-has-expandable-action="true"
      data-num-columns-excl-action-col="4"
    >
      <div
        class="el-table-headers-row"
      >
        <div
          class="el-table-header"
        >
          Entity Name
        </div>
        <div
          class="el-table-header"
        >
          Total Number Calls
        </div>
        <div
          class="el-table-header"
        >
          Total Cost
        </div>
        <div
          class="el-table-header"
        >
          Total Number Endpoints
        </div>
        <div
          class="el-table-header"
        >
          <span
            class="el-icon"
            style="font-size: 1.2rem;"
          >
            <svg />
          </span>
        </div>
      </div>
      <div
        class="el-table-row-container"
      >
        <div
          class="el-table-row"
        >
          <div
            class="el-table-cell-has-dark-text el-table-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
            <div
              class="el-table-cell-content"
              data-narrow-label="Entity Name"
            >
              contacts
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
            <div
              class="el-table-cell-content"
              data-narrow-label="Total Number Calls"
            >
              157
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
            <div
              class="el-table-cell-content"
              data-narrow-label="Total Cost"
            >
              £1.96
            </div>
          </div>
          <div
            class="el-table-cell-has-dark-text el-table-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
            <div
              class="el-table-cell-content"
              data-narrow-label="Total Number Endpoints"
            >
              2
            </div>
          </div>
          <div
            class="el-table-expandable-row-trigger-cell"
          >
            <span
              class="el-intent-secondary el-icon"
            >
              <svg />
            </span>
          </div>
        </div>
        <div
          class="el-table-expandable-row"
        >
          <div
            class="el-table-expandable-container"
          >
            <div
              class="el-table"
            >
              <div
                class="three-col-table el-table-headers-row"
              >
                <div
                  class="el-table-header"
                >
                  Endpoint Name
                </div>
                <div
                  class="el-table-header"
                >
                  Endpoint Number Calls
                </div>
                <div
                  class="el-table-header"
                >
                  Endpoint Cost
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`UsageTable should match a snapshot with no billing 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div>
        <div
          class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon"
            >
              <svg />
            </span>
          </div>
          <div
            class="el-pn-content"
          >
            No results found for your selected filters
          </div>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div>
      <div
        class="el-intent-secondary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon"
          >
            <svg />
          </span>
        </div>
        <div
          class="el-pn-content"
        >
          No results found for your selected filters
        </div>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
